<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/menu_edit_profile" />
        <item
            android:id="@+id/nav_invite"
            android:icon="@drawable/ic_menu_invite"
            android:title="@string/menu_invite_friends" />
        <item
            android:id="@+id/nav_black_list"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_black_list" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_log_out" />
    </group>

</menu>
